--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
   "author": "stone <stone@mytraces.net>",
   "license": "MIT",
   "dependencies": {
-    "sclib": "^0.0.1"
+    "browser-sync": "^2.23.5",
+    "bs-fullscreen-message": "^1.1.0",
+    "sclib": "^0.0.1",
+    "semistandard": "^12.0.0",
+    "standard": "^10.0.3",
+    "strip-ansi": "^4.0.0",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-merge": "^4.1.1"
   }
 }
